--- a/templates/index_tuner.html
+++ b/templates/index_tuner.html
@@ -30,11 +30,13 @@
                                     <div class="task-info clearfix">
                                         <div class="desc pull-left">
                                             <h5>{{ item.ref }}</h5>
-                                            <p>{{ item.description|safe }}</p>
-                                        </div>
-                                    <span class="notification-pie-chart pull-right" data-percent="{{ item.sla_assign_tuner_pct }}">
+                                            <span class="notification-pie-chart pull-right" data-percent="{{ item.sla_assign_tuner_pct }}">
                             <span class="percent"></span>
                             </span>
+                                            <p>{{ item.when|timeuntil }}<br />
+                                                {{ item.description|safe }}</p>
+                                        </div>
+
                                     </div>
                                 </a>
                             </li>
@@ -52,7 +54,7 @@
             <div class="mini-stat clearfix">
                 <span class="mini-stat-icon booking_status_3"><i class="fa booking_status_3_icon"></i></span>
                 <div class="mini-stat-info">
-                    <span>{{ matched_today|length }}</span>
+                    <span>{{ num_current }}</span>
                     Matched Bookings
                     <ul class="tasks-bar">
                         {%  for item in list_current %}
@@ -61,19 +63,50 @@
                                     <div class="task-info clearfix">
                                         <div class="desc pull-left">
                                             <h5>{{ item.ref }}</h5>
-                                            <p>{{ item.description|safe }}</p>
+                                            <p>{{ item.when|timeuntil }}<br />
+                                                {{ item.description|safe }}</p>
                                         </div>
-                                <span class=" pull-right">
-                                    {{ item.when|timeuntil }}
-                                </span>
+                                    </div>
+                                </a>
+                            </li>
+                        {%  endfor %}
+                        {% if num_current > 5 %}
+                            <li>
+                                <a href="{%  url "to_completed" %}">See All Pending Bookings</a>
+                            </li>
+                            </ul>
+                        {% endif %}
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="mini-stat clearfix">
+                <span class="mini-stat-icon booking_status_4"><i class="fa booking_status_4_icon"></i></span>
+                <div class="mini-stat-info">
+                    <span>{{ num_to_complete }}</span>
+                    Incomplete Tunings
+                    <ul class="tasks-bar">
+                        {%  for item in list_to_complete %}
+                            <li >
+                                <a href="{{item.get_absolute_url}}">
+                                    <div class="task-info clearfix">
+                                        <div class="desc pull-left">
+                                            <h5>{{ item.ref }}</h5>
+                                            <p>{{ item.when|timesince }}<br />
+                                                {{ item.description|safe }}</p>
+                                        </div>
+
                                     </div>
                                 </a>
                             </li>
                         {%  endfor %}
 
-                        <li>
-                            <a href="{%  url "to_completed" %}">See All Pending Bookings</a>
-                        </li>
+                        {% if num_to_complete > 5 %}
+                            <li>
+                                <a href="{%  url "to_completed" %}">See All Incomplete Tunings</a>
+                            </li>
+                        {% endif %}
                     </ul>
 
                 </div>
@@ -83,56 +116,18 @@
             <div class="mini-stat clearfix">
                 <span class="mini-stat-icon booking_status_5"><i class="fa booking_status_5_icon"></i></span>
                 <div class="mini-stat-info">
-                    <span>{{ num_current }}</span>
-                    Pending Tunings
+                    <span>{{ num_complete }}</span>
+                    Unpaid Tunings
                     <ul class="tasks-bar">
-                        {%  for item in list_to_complete %}
-                            <li >
+
+                        {%  for item in list_complete %}
+                           <li >
                                 <a href="{{item.get_absolute_url}}">
                                     <div class="task-info clearfix">
                                         <div class="desc pull-left">
                                             <h5>{{ item.ref }}</h5>
                                             <p>{{ item.description|safe }}</p>
                                         </div>
-                                        {{ item.status }}
-                                <span class="pull-right">
-                                    {{ item.when|timesince }}
-                                </span>
-                                    </div>
-                                </a>
-                            </li>
-                        {%  endfor %}
-
-                        <li>
-                            <a href="{%  url "to_completed" %}">See All Incomplete Tunings</a>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="mini-stat clearfix">
-                <span class="mini-stat-icon booking_status_9"><i class="fa booking_status_9_icon"></i></span>
-                <div class="mini-stat-info">
-                    <span>{{ paid_today|length }}</span>
-                    Paid Tunings
-                    <ul class="dropdown-menu extended inbox">
-                        <li>
-                            <p class="">You have <span>{{ num_complete }}</span> pending payment</p>
-                        </li>
-                        {%  for item in list_complete %}
-                            <li >
-                                <a href="{{item.get_absolute_url}}">
-                                    <div class="task-info clearfix">
-                                        <div class="desc pull-left">
-                                            <h5>{{ item.where }}</h5>
-                                            <p>{{ item.when }}</p>
-                                            <p>Tuner: {{ item.tuner }}</p>
-                                        </div>
-                                <span class=" pull-right">
-                                    {{ item.when|timesince }}
-                                </span>
                                     </div>
                                 </a>
                             </li>
