--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <link href="{{ STATIC_URL }}css/style.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/style-responsive.css" rel="stylesheet" />
 
-   <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
 
 
 
@@ -35,6 +35,28 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
+    <script>
+        //TODO: remember status of left hand sidebar - keeps popping back out
+
+        API = "{{ API_URL }}";
+        USER_ID = {{ user.id }};
+
+        {% if user.is_admin %}
+            USER_TYPE = "admin";
+        {% elif user.is_booker %}
+            USER_TYPE = "booker";
+        {% elif user.is_tuner %}
+            USER_TYPE = "tuner";
+        {% endif %}
+
+        {% if user.is_booker %}
+            CLIENT_ID = {{ user.client.id }};
+        {% else %}
+            CLIENT_ID = 0;
+        {% endif %}
+
+
+    </script>
 
     {% block extra_head %}
     {% endblock extra_head %}
@@ -339,6 +361,8 @@
     <!--main content start-->
     <section id="main-content">
         <section class="wrapper">
+
+
             <!-- page start-->
             {% block main %}
                 <div class="row">
@@ -368,7 +392,7 @@
 
 
         <div class="right-stat-bar leftside-navigation">
-            <ul id="loglist" class="sidebar-menu">
+            <ul id="loglist" class="messages sidebar-menu" data-limit="10">
 
 
 
@@ -395,8 +419,12 @@
 ================================================== -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>   <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+<link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
 <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
 
@@ -410,14 +438,7 @@
 <script src="{{ STATIC_URL }}js/moment.min.js"></script>
 <script src="{{ STATIC_URL }}js/q.js"></script>
 
-<script>
-    //TODO: remember status of left hand sidebar - keeps popping back out
 
-    API = "{{ API_URL }}";
-
-
-
-</script>
 
 <!-- templates -->
 {% verbatim %}
@@ -447,13 +468,13 @@
 <script id="log_list_template" type="x-tmpl-mustache">
                 <li>
                     <a href="{{ booking_url }}">
-                        <span class="photo"><img alt="avatar" src="images/avatar-mini.jpg"></span>
+                        <span class="photo"><img alt="avatar" src=""></span>
                                 <span class="subject">
                                 <span class="booking">{{ long_heading }}</span>
                                 <span class="time">{{ time }}</span>
                                 </span>
                                 <span class="comment">
-                                    {{ text }}
+                                    {{text}}
                                 </span>
                     </a>
                 </li>
@@ -500,6 +521,9 @@
          <div class="comment_list" data-pk="XYZ"></div>
 
          */
+
+
+
     }
 
 </script>
@@ -522,8 +546,17 @@
         "use strict";
         $(document).ready(function () {
 
+            // load messages from log
+            {% if user.is_admin %}
+                var call = API + "log?format=json";
+            {% elif user.is_booker %}
+                var call = API + "log?format=json&client_id={{ user.client_id }}";
+            {% elif user.is_tuner %}
+                var call = API + "log?format=json&user_id={{ user.id }}";
+            {% endif %}
 
-            load_recent_comments($("#loglist"));
+
+            load_recent_comments($("#loglist"), "{{ user.logfilter }}");
 
             base();
 
