--- a/templates/index_admin.html
+++ b/templates/index_admin.html
@@ -52,8 +52,8 @@
             <div class="mini-stat clearfix">
                 <span class="mini-stat-icon booking_status_3"><i class="fa booking_status_3_icon"></i></span>
                 <div class="mini-stat-info">
-                    <span>{{ matched_today|length }}</span>
-                    Matched Bookings
+                    <span>{{ num_current }}</span>
+                    Pending Bookings
                     <ul class="tasks-bar">
                         {%  for item in list_current %}
                             <li >
@@ -63,39 +63,40 @@
                                             <h5>{{ item.ref }}</h5>
                                             <p>{{ item.description|safe }}</p>
                                         </div>
-                                <span class=" pull-right">
+                                <span class="togo pull-right">
                                     {{ item.when|timeuntil }}
                                 </span>
                                     </div>
                                 </a>
                             </li>
                         {%  endfor %}
-
-                        <li>
-                            <a href="{%  url "to_completed" %}">See All Pending Bookings</a>
-                        </li>
-                    </ul>
+                        {% if num_current > 5 %}
+                            <li>
+                                <a href="{%  url "to_completed" %}">See All Pending Bookings</a>
+                            </li>
+                            </ul>
+                        {% endif %}
 
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="mini-stat clearfix">
-                <span class="mini-stat-icon booking_status_5"><i class="fa booking_status_5_icon"></i></span>
+                <span class="mini-stat-icon booking_status_4"><i class="fa booking_status_4_icon"></i></span>
                 <div class="mini-stat-info">
-                    <span>{{ num_current }}</span>
-                    Pending Tunings
+                    <span>{{ num_to_complete }}</span>
+                    Incomplete Tunings
                     <ul class="tasks-bar">
+
                         {%  for item in list_to_complete %}
                             <li >
                                 <a href="{{item.get_absolute_url}}">
                                     <div class="task-info clearfix">
                                         <div class="desc pull-left">
-                                            <h5>{{ item.ref }}</h5>
-                                            <p>{{ item.description|safe }}</p>
+                                            <h5>{{ item.where }}</h5>
+                                            <p>{{ description }}</p>
                                         </div>
-                                        {{ item.status }}
-                                <span class="pull-right">
+                                <span class="togo pull-right">
                                     {{ item.when|timesince }}
                                 </span>
                                     </div>
@@ -103,9 +104,11 @@
                             </li>
                         {%  endfor %}
 
-                        <li>
-                            <a href="{%  url "to_completed" %}">See All Incomplete Tunings</a>
-                        </li>
+                        {% if num_to_complete > 5 %}
+                            <li>
+                                <a href="{%  url "to_completed" %}">See All Incomplete Tunings</a>
+                            </li>
+                        {% endif %}
                     </ul>
 
                 </div>
@@ -130,7 +133,7 @@
                                             <p>{{ item.when }}</p>
                                             <p>Tuner: {{ item.tuner }}</p>
                                         </div>
-                                <span class=" pull-right">
+                                <span class="togo pull-right">
                                     {{ item.when|timesince }}
                                 </span>
                                     </div>
@@ -152,77 +155,6 @@
     <!--mini statistics end-->
 
 
-    <!--mini statistics start-->
-    <div class="row">
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="top-stats-panel">
-                        <div class="gauge-canvas">
-                            <h4 class="widget-h">Pending Tuners</h4>
-                            <canvas width=160 height=100 id="gauge"></canvas>
-                        </div>
-                        <ul class="gauge-meta clearfix">
-                            <li id="gauge-textfield" class="pull-left gauge-value"></li>
-                            <li class="pull-right gauge-title">Safe</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="top-stats-panel">
-                        <div class="daily-visit">
-                            <h4 class="widget-h">Daily Visitors</h4>
-                            <div id="daily-visit-chart" style="width:100%; height: 100px; display: block">
 
-                            </div>
-                            <ul class="chart-meta clearfix">
-                                <li class="pull-left visit-chart-value">3233</li>
-                                <li class="pull-right visit-chart-title"><i class="fa fa-arrow-up"></i> 15%</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="top-stats-panel">
-                        <h4 class="widget-h">Top Advertise</h4>
-                        <div class="sm-pie">
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="top-stats-panel">
-                        <h4 class="widget-h">Daily Sales</h4>
-                        <div class="bar-stats">
-                            <ul class="progress-stat-bar clearfix">
-                                <li data-percent="50%"><span class="progress-stat-percent pink"></span></li>
-                                <li data-percent="90%"><span class="progress-stat-percent"></span></li>
-                                <li data-percent="70%"><span class="progress-stat-percent yellow-b"></span></li>
-                            </ul>
-                            <ul class="bar-legend">
-                                <li><span class="bar-legend-pointer pink"></span> New York</li>
-                                <li><span class="bar-legend-pointer green"></span> Los Angels</li>
-                                <li><span class="bar-legend-pointer yellow-b"></span> Dallas</li>
-                            </ul>
-                            <div class="daily-sales-info">
-                                <span class="sales-count">1200 </span> <span class="sales-label">Products Sold</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </div>
 
 {% endblock main %}
