--- a/templates/index_client.html
+++ b/templates/index_client.html
@@ -52,7 +52,7 @@
             <div class="mini-stat clearfix">
                 <span class="mini-stat-icon booking_status_3"><i class="fa booking_status_3_icon"></i></span>
                 <div class="mini-stat-info">
-                    <span>{{ matched_today|length }}</span>
+                    <span>{{{ num_current }}</span>
                     Matched Bookings
                     <ul class="tasks-bar">
                         {%  for item in list_current %}
@@ -63,7 +63,7 @@
                                             <h5>{{ item.ref }}</h5>
                                             <p>{{ item.description|safe }}</p>
                                         </div>
-                                <span class=" pull-right">
+                                <span class="time pull-right">
                                     {{ item.when|timeuntil }}
                                 </span>
                                     </div>
@@ -95,7 +95,7 @@
                                             <p>{{ item.description|safe }}</p>
                                         </div>
                                         {{ item.status }}
-                                <span class="pull-right">
+                                <span class="time pull-right">
                                     {{ item.when|timesince }}
                                 </span>
                                     </div>
@@ -116,7 +116,7 @@
                 <span class="mini-stat-icon booking_status_9"><i class="fa booking_status_9_icon"></i></span>
                 <div class="mini-stat-info">
                     <span>{{ paid_today|length }}</span>
-                    Paid Tunings
+                    Unpaid Tunings
                     <ul class="dropdown-menu extended inbox">
                         <li>
                             <p class="">You have <span>{{ num_complete }}</span> pending payment</p>
@@ -130,7 +130,7 @@
                                             <p>{{ item.when }}</p>
                                             <p>Tuner: {{ item.tuner }}</p>
                                         </div>
-                                <span class=" pull-right">
+                                <span class="time pull-right">
                                     {{ item.when|timesince }}
                                 </span>
                                     </div>
@@ -152,77 +152,5 @@
     <!--mini statistics end-->
 
 
-    <!--mini statistics start-->
-    <div class="row">
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="top-stats-panel">
-                        <div class="gauge-canvas">
-                            <h4 class="widget-h">Pending Tuners</h4>
-                            <canvas width=160 height=100 id="gauge"></canvas>
-                        </div>
-                        <ul class="gauge-meta clearfix">
-                            <li id="gauge-textfield" class="pull-left gauge-value"></li>
-                            <li class="pull-right gauge-title">Safe</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="top-stats-panel">
-                        <div class="daily-visit">
-                            <h4 class="widget-h">Daily Visitors</h4>
-                            <div id="daily-visit-chart" style="width:100%; height: 100px; display: block">
-
-                            </div>
-                            <ul class="chart-meta clearfix">
-                                <li class="pull-left visit-chart-value">3233</li>
-                                <li class="pull-right visit-chart-title"><i class="fa fa-arrow-up"></i> 15%</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="top-stats-panel">
-                        <h4 class="widget-h">Top Advertise</h4>
-                        <div class="sm-pie">
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <div class="col-md-3">
-            <section class="panel">
-                <div class="panel-body">
-                    <div class="top-stats-panel">
-                        <h4 class="widget-h">Daily Sales</h4>
-                        <div class="bar-stats">
-                            <ul class="progress-stat-bar clearfix">
-                                <li data-percent="50%"><span class="progress-stat-percent pink"></span></li>
-                                <li data-percent="90%"><span class="progress-stat-percent"></span></li>
-                                <li data-percent="70%"><span class="progress-stat-percent yellow-b"></span></li>
-                            </ul>
-                            <ul class="bar-legend">
-                                <li><span class="bar-legend-pointer pink"></span> New York</li>
-                                <li><span class="bar-legend-pointer green"></span> Los Angels</li>
-                                <li><span class="bar-legend-pointer yellow-b"></span> Dallas</li>
-                            </ul>
-                            <div class="daily-sales-info">
-                                <span class="sales-count">1200 </span> <span class="sales-label">Products Sold</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </div>
 
 {% endblock main %}
