--- a/templates/web/booking_detail.html
+++ b/templates/web/booking_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load tunertags %}
 
 {% block extra_head %}
 
@@ -24,6 +25,12 @@
             padding: 15px;
         }
 
+
+        #map_canvas {
+            width: 350px;
+            height: 250px;
+        }
+
     </style>
 {% endblock extra_head %}
 
@@ -31,70 +38,73 @@
 
 
     <div class="container">
-        <div class="row">
+    <div class="row">
 
-            <div class="col-sm-12">
-                <section class="panel">
-                    <header class="panel-heading">
-                        {{ object.heading_long }}
-                    </header>
-                    <div class="panel-body">
+        <div class="col-sm-12">
+            <section class="panel">
+                <header class="panel-heading">
+                    <h1>{{ object }}</h1>
+                </header>
+                <div class="panel-body">
 
-                        <div class="alert alert-block shout booking_status_{{ object.status }} fade in">{{ object.description|safe }}</div>
+                    <div class="alert alert-block shout booking_status_{{ object.status }} fade in">{% booking_description object %}</div>
 
-                    </div>
-                </section>
-            </div>
+                </div>
+            </section>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <section class="panel">
+                <header class="panel-heading">
+                    {{ object.short_heading }} History
+                </header>
 
-            <div class="col-sm-4">
-                <section class="panel">
-                    <header class="panel-heading">
-                        {{ object.short_heading }} History
-                    </header>
+                <div class="panel-body">
 
-                    <div class="panel-body">
-
-                        <div class="row">
-                            <div class="chunk">
-                                <i class="fa booking_status_1_icon"></i>Requested by <strong>{{ object.booker }}</strong><span class="label pull-right booking_status_1">{{ object.requested_at }}</span>
-                            </div>
+                    <div class="row">
+                        <div class="chunk">
+                            <i class="fa booking_status_1_icon"></i>Requested by <strong>{{ object.booker }}</strong><span class="label pull-right booking_status_1">{{ object.requested_at }}</span>
                         </div>
+                    </div>
 
-                        <div class="row">
-                            <div class="chunk">
-                                {%  if object.status == '1' %}
+
+                    <div class="row">
+                        <div class="chunk">
+                            {%  if object.status == '1' %}
+                                {% if user.is_admin %}
 
                                     <i class="fa booking_status_3_icon"></i>Assign Tuner &nbsp;&nbsp:<strong><span class="label pull-right booking_status_3"></span><a href="#" class="tuners" data-pk="{{ object.ref }}">?</a></strong>
-
-                                {%  else  %}
-                                    <i class="fa booking_status_3_icon"></i>Tuner <strong>{{ object.tuner }}</strong><span class="label pull-right booking_status_3">{{ object.booked_at }}</span>
-                                {%  endif %}
-                            </div>
+                                {% endif %}
+                            {%  else  %}
+                                <i class="fa booking_status_3_icon"></i>Tuner <strong>{{ object.tuner }}</strong><span class="label pull-right booking_status_3">{{ object.booked_at }}</span>
+                            {%  endif %}
                         </div>
+                    </div>
 
 
-                        {%  if object.status == '4' %}
-                            <div class="row">
-                                <div class="chunk">
+                    {%  if object.status == '4' %}
+                        <div class="row">
+                            <div class="chunk">
 
-                                    <i class="fa booking_status_4_icon"></i>Mark as Complete
+                                <i class="fa booking_status_4_icon"></i>Mark as Complete
                                     <span class="label pull-right booking_status_3">
                                <input type="checkbox" class="switch switch_complete" data-text-label="Tuned" data-on=null, data-off=success data-on-label="No" data-off-label="Yes" checked id="complete_{{ object_ref }}" data-pk="{{ object.ref }}" /></span>
 
+                            </div>
+                        </div>
+                    {%  endif %}
+
+                    {%  if object.status >= '5' %}
+                        {%  if not object.cancelled %}
+                            <div class="row">
+                                <div class="chunk">
+                                    <i class="fa booking_status_4_icon"></i>Tuned by <strong>{{ object.tuner }}</strong><span class="label pull-right booking_status_4">{{ object.completed_at }}</span>
                                 </div>
                             </div>
-                        {%  endif %}
+                        {% endif %}
 
-                        {%  if object.status >= '5' %}
-                            {%  if not object.cancelled %}
-                                <div class="row">
-                                    <div class="chunk">
-                                        <i class="fa booking_status_4_icon"></i>Tuned by <strong>{{ object.tuner }}</strong><span class="label pull-right booking_status_4">{{ object.completed_at }}</span>
-                                    </div>
-                                </div>
-                            {% endif %}
-
-
+                        {% if user.is_admin %}
                             {%  if object.has_provider_paid %}
                                 <div class="row">
                                     <div class="chunk">
@@ -113,9 +123,10 @@
                                     </div>
                                 {% endif %}
                             {%  endif %}
+                        {%  endif %}
 
 
-
+                        {%  if user.is_admin or user.is_booker %}
                             {%  if  object.has_client_paid %}
                                 <div class="row">
                                     <div class="chunk">
@@ -134,77 +145,109 @@
                                 {%  endif %}
                             {% endif %}
                         {% endif %}
+                    {% endif %}
 
 
-                        {%  if object.status == '9'  %}
-                            <div class="row">
-                                <div class="chunk">
-                                    <i class="fa booking_status_9_icon"></i>Archived<span class="label pull-right booking_status_9">{{ object.archived_at }}</span>
-                                </div>
+                    {%  if object.status == '9'  %}
+                        <div class="row">
+                            <div class="chunk">
+                                <i class="fa booking_status_9_icon"></i>Archived<span class="label pull-right booking_status_9">{{ object.archived_at }}</span>
                             </div>
-                        {%  endif %}
-                        {%  if object.status == '8'  %}
-                            <div class="row">
-                                <div class="chunk">
-                                    <i class="fa booking_status_8_icon"></i>Cancelled<span class="label pull-right booking_status_8">{{ object.cancelled_at }}</span>
-                                </div>
+                        </div>
+                    {%  endif %}
+                    {%  if object.status == '8'  %}
+                        <div class="row">
+                            <div class="chunk">
+                                <i class="fa booking_status_8_icon"></i>Cancelled<span class="label pull-right booking_status_8">{{ object.cancelled_at }}</span>
                             </div>
-                        {%  endif %}
-
-                    </div>
-                </section>
+                        </div>
+                    {%  endif %}
 
 
-
-            </div>
-            <div class="col-sm-8">
-                <section class="panel">
-                    <header class="panel-heading wht-bg">
-                        Details
-                    </header>
-
-                    <div class="panel-body">
-
-                        <p>Client: {{ object.client }}</p>
-                        <p>Session Ref: {{ object.session_ref }}</p>
-                        <p>Session Deadline: {{ object.deadline }}</p>
-
-                        <p>Tuning to start at: {{ object.start_time }}</p>
+                    <div id="button_bar">
                         {% if object.status < '5' %}
-                            <button type="button" class="btn btn-danger cancel_booking" data-pk="{{ object.ref }}">Cancel Booking</button>
+                            {% if user.is_booker or user.is_admin %}
+                                <button type="button" class="btn btn-danger cancel_booking" data-pk="{{ object.ref }}">Cancel Booking</button>
+                            {% endif %}
+                        {% endif %}
+
+                        {% if object.status == '1' %}
+                            {% if user.is_tuner %}
+                                <button type="button" class="btn  btn-lg center-block booking_status_3 accept_booking" data-pk="{{ object.ref }}">Accept Booking</button>
+
+                            {% endif %}
+                        {% endif %}
+
+                        {% if object.status > '2' and object.status < '5' %}
+                            {% if user.is_tuner %}
+
+                                <button type="button" class="btn  btn-lg center-block booking_status_4 complete_booking" data-pk="{{ object.ref }}">Confirm {{ object.activity }} is Complete</button>
+
+                            {% endif %}
+                        {% endif %}
+                        {% if object.status == '5' %}
+                            {% if user.is_tuner %}
+
+                                <button type="button" class="btn  btn-lg center-block booking_status_4 booking_provider_paid" data-pk="{{ object.ref }}">Confirm Payment Received</button>
+
+                            {% endif %}
                         {% endif %}
                     </div>
-
-                </section>
-
-
-                <section class="panel">
-                    <header class="panel-heading wht-bg">
-                        Comments
-                        <a href="#" class="comment btn btn-primary fa fa-pencil pull-right"  data-pk="{{ object.ref }}" data-value="">Comment</a>
-                    </header>
-
-                    <div class="panel-body">
-
-
-                        <div class="comment_list" data-pk="{{ object.ref }}"></div>
-
-                    </div>
+                </div>
 
 
 
-                </section>
+            </section>
 
 
-            </div>
+
+        </div>
+        <div class="col-sm-6">
+            <section class="panel">
+                <header class="panel-heading wht-bg">
+                    Location
+                </header>
+
+                <div class="panel-body">
+                    <div id="map_canvas"></div>
+                </div>
+
+            </section>
+        </div>
+
+
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <section class="panel">
+                <header class="panel-heading wht-bg">
+                    Comments
+                    <a href="#" class="comment btn btn-primary fa fa-pencil pull-right"  data-pk="{{ object.ref }}" data-value="">Comment</a>
+                </header>
+
+                <div class="panel-body">
+
+
+                    <div class="comment_list" data-pk="{{ object.ref }}"></div>
+
+                </div>
+
+
+
+            </section>
+
         </div>
     </div>
+    </div>
+
 
 {% endblock main %}
 
 {%  block js %}
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="{{ STATIC_URL }}js/tuning_updates.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
     <script type="text/javascript">
         API = "{{ API_URL }}";
@@ -213,6 +256,12 @@
 
             init();
             update_events();  // in tuning_updates.js
+
+            // get comments and add box to add comments
+                                $(".comment_list").slideDown();
+            add_comment_editable();
+            add_comment_list();
+
             do_last();   // in base
 
         });
@@ -250,8 +299,28 @@
             });
 
 
+
         }
 
+        function init_map() {
+            // init map
+            var map_canvas = document.getElementById('map_canvas');
+            var location = new google.maps.LatLng({{ object.studio.lat}}, {{ object.studio.lon}});
+            var map_options = {
+                center: location,
+                zoom: 18,
+                mapTypeId: google.maps.MapTypeId.HYBRID
+            }
+            var map = new google.maps.Map(map_canvas, map_options)
+
+            var marker = new google.maps.Marker({
+                position: location,
+                map: map,
+                title: '{{ object.studio }}'
+            });
+        }
+
+        google.maps.event.addDomListener(window, 'load', init_map);
 
     </script>
 {% endblock js %}
